Add subject to send email function Handle file path stored in prefs for workspace